# search-ranking-stack

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: dataset.md  methods.md  metrics.md  overview.md
notebooks/: walkthrough.ipynb
results/: metrics.json
src/search_ranking_stack/: __init__.py  config.py  data_loader.py  evaluate.py  run_all.py  visualize.py
src/search_ranking_stack/data/: download.py
src/search_ranking_stack/stages/: __init__.py  s01_bm25.py  s02_dense.py  s03_hybrid_rrf.py  s04_cross_encoder.py  s05_llm_rerank.py
