[project]
name = "search-ranking-stack"
version = "0.1.0"
description = "Multi-stage search ranking demo: BM25 → Dense → Hybrid RRF → Cross-Encoder → LLM Reranker"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Slava Kurilyak" }
]
dependencies = [
    "datasets>=3.0",
    "httpx>=0.27",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "pytrec-eval-terrier>=0.5.6",
    "rank-bm25>=0.2.2",
    "rich>=13.0",
    "sentence-transformers>=3.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
llm = [
    "accelerate>=0.33",
    "torch>=2.2",
    "transformers>=4.44",
]
api = [
    "anthropic>=0.34",
]
ui = [
    "gradio>=5.0",
]
notebook = [
    "ipywidgets>=8.0",
    "jupyterlab>=4.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
download-data = "search_ranking_stack.data.download:main"
run-all = "search_ranking_stack.run_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search_ranking_stack"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
]
